# ml-model-demo

./: README.md
regression-model/: pyproject.toml
