[tool.poetry]
name = "regression-model"
version = "0.1.0"
description = ""
authors = ["rohitsinghsalyan <rohitsinghsalyan@gmail.com>"]
readme = "README.md"
packages = [{include = "regression_model", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mkdocs = "^1.6.1"
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
